--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.29 2004/10/01 13:44:14 tom_kelly33 Exp $
+# $Id: rc.sysinit.in,v 1.30 2004/10/05 02:03:38 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -400,7 +400,9 @@ setupinit() {
 	if `/bin/grep -iqv hwdetect=no /proc/cmdline && /bin/grep -iqv nodetect /proc/cmdline`; then
 		OLDPATH=$PATH
 		export PATH=/sbin:/usr/sbin:/bin:/usr/bin
-		/initrd/usr/sbin/hwdetect
+		echo  "rc.sysinit - setupinit() -Starting hwdetect"
+		/initrd/usr/sbin/hwdetect 
+		echo  "rc.sysinnit - Done with hwdetect"
 		export PATH=$OLDPATH
 	fi
 
@@ -449,8 +451,7 @@ setupinit() {
 	export PATH=/sbin:/usr/sbin:/bin:/usr/bin:/usr/X11R6/bin:/usr/local/bin:/usr/local/sbin
 	/etc/rc.d/rc.sysinit
 }
-echo -n "-------------- rcsysinit --------------"
-echo -n " "
+echo "-------------- rcsysinit --------------"
 setuproot ""
 setupinit ""
 sleep 5
